--- a/bookstore_app/Gemfile
+++ b/bookstore_app/Gemfile
@@ -17,6 +17,8 @@ gem 'bootstrap', '~> 4.1', '>=4.1.3'
 gem 'sprockets-rails', '~>3.2', '>=3.2.1'
 #JQuery Rails
 gem 'jquery-rails', '~>4.3', '>=4.3.3'
+#Use MySQL
+gem 'mysql2'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
